# ML-For-Beginners

./: pyproject.toml
2-Regression/1-Tools/: assignment_2.ipynb  notebook.ipynb
2-Regression/2-Data/: notebook.ipynb
2-Regression/4-Logistic/: notebook.ipynb
4-Classification/1-Introduction/: notebook.ipynb
4-Classification/2-Classifiers-1/: notebook.ipynb
4-Classification/3-Classifiers-2/: notebook.ipynb
4-Classification/4-Applied/: model.onnx
4-Classification/data/: cleaned_cuisines.csv
